Migrates to java 1.8